frb_example/pure_dart_multi/dart/lib/bridge_generated_api_block_2.io.dart


  void wire_test_cross_shared_struct_in_block_2_for_2_and_3(
    int port_,
    ffi.Pointer<wire_CrossSharedStructInBlock2And3> custom,
  ) {
    return _wire_test_cross_shared_struct_in_block_2_for_2_and_3(
      port_,
      custom,
    );
  }

  late final _wire_test_cross_shared_struct_in_block_2_for_2_and_3Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_CrossSharedStructInBlock2And3>)>>(
          'wire_test_cross_shared_struct_in_block_2_for_2_and_3');
  late final _wire_test_cross_shared_struct_in_block_2_for_2_and_3 =
      _wire_test_cross_shared_struct_in_block_2_for_2_and_3Ptr
          .asFunction<void Function(int, ffi.Pointer<wire_CrossSharedStructInBlock2And3>)>();

  void wire_test_unique_struct_2(
    int port_,
    ffi.Pointer<wire_StructOnlyForBlock2> custom,
    ffi.Pointer<wire_uint_8_list> s,
    int i,
  ) {
    return _wire_test_unique_struct_2(
      port_,
      custom,
      s,
      i,
    );
  }

  late final _wire_test_unique_struct_2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_StructOnlyForBlock2>, ffi.Pointer<wire_uint_8_list>,
              ffi.Int16)>>('wire_test_unique_struct_2');
  late final _wire_test_unique_struct_2 = _wire_test_unique_struct_2Ptr
      .asFunction<void Function(int, ffi.Pointer<wire_StructOnlyForBlock2>, ffi.Pointer<wire_uint_8_list>, int)>();

  void wire_test_struct_defined_in_block_2(
    int port_,
    ffi.Pointer<wire_StructDefinedInBlock2> custom,
  ) {
    return _wire_test_struct_defined_in_block_2(
      port_,
      custom,
    );
  }

  late final _wire_test_struct_defined_in_block_2Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_StructDefinedInBlock2>)>>(
          'wire_test_struct_defined_in_block_2');
  late final _wire_test_struct_defined_in_block_2 =
      _wire_test_struct_defined_in_block_2Ptr.asFunction<void Function(int, ffi.Pointer<wire_StructDefinedInBlock2>)>();

  void wire_test_method__method__EnumDefinedInBlock2(
    int port_,
    ffi.Pointer<wire_EnumDefinedInBlock2> that,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_method__method__EnumDefinedInBlock2(
      port_,
      that,
      message,
    );
  }

  late final _wire_test_method__method__EnumDefinedInBlock2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_EnumDefinedInBlock2>,
              ffi.Pointer<wire_uint_8_list>)>>('wire_test_method__method__EnumDefinedInBlock2');
  late final _wire_test_method__method__EnumDefinedInBlock2 = _wire_test_method__method__EnumDefinedInBlock2Ptr
      .asFunction<void Function(int, ffi.Pointer<wire_EnumDefinedInBlock2>, ffi.Pointer<wire_uint_8_list>)>();

  void wire_test_static_method__static_method__EnumDefinedInBlock2(
    int port_,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_static_method__static_method__EnumDefinedInBlock2(
      port_,
      message,
    );
  }

  late final _wire_test_static_method__static_method__EnumDefinedInBlock2Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_uint_8_list>)>>(
          'wire_test_static_method__static_method__EnumDefinedInBlock2');
  late final _wire_test_static_method__static_method__EnumDefinedInBlock2 =
      _wire_test_static_method__static_method__EnumDefinedInBlock2Ptr
          .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  void wire_test_method__method__StructDefinedInBlock2(
    int port_,
    ffi.Pointer<wire_StructDefinedInBlock2> that,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_method__method__StructDefinedInBlock2(
      port_,
      that,
      message,
    );
  }

  late final _wire_test_method__method__StructDefinedInBlock2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_StructDefinedInBlock2>,
              ffi.Pointer<wire_uint_8_list>)>>('wire_test_method__method__StructDefinedInBlock2');
  late final _wire_test_method__method__StructDefinedInBlock2 = _wire_test_method__method__StructDefinedInBlock2Ptr
      .asFunction<void Function(int, ffi.Pointer<wire_StructDefinedInBlock2>, ffi.Pointer<wire_uint_8_list>)>();

  void wire_test_static_method__static_method__StructDefinedInBlock2(
    int port_,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_static_method__static_method__StructDefinedInBlock2(
      port_,
      message,
    );
  }

  late final _wire_test_static_method__static_method__StructDefinedInBlock2Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_uint_8_list>)>>(
          'wire_test_static_method__static_method__StructDefinedInBlock2');
  late final _wire_test_static_method__static_method__StructDefinedInBlock2 =
      _wire_test_static_method__static_method__StructDefinedInBlock2Ptr
          .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  void wire_test_method__method__StructOnlyForBlock2(
    int port_,
    ffi.Pointer<wire_StructOnlyForBlock2> that,
    ffi.Pointer<wire_uint_8_list> message,
    int num,
  ) {
    return _wire_test_method__method__StructOnlyForBlock2(
      port_,
      that,
      message,
      num,
    );
  }

  late final _wire_test_method__method__StructOnlyForBlock2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_StructOnlyForBlock2>, ffi.Pointer<wire_uint_8_list>,
              ffi.Uint16)>>('wire_test_method__method__StructOnlyForBlock2');
  late final _wire_test_method__method__StructOnlyForBlock2 = _wire_test_method__method__StructOnlyForBlock2Ptr
      .asFunction<void Function(int, ffi.Pointer<wire_StructOnlyForBlock2>, ffi.Pointer<wire_uint_8_list>, int)>();

  void wire_test_static_method__static_method__StructOnlyForBlock2(
    int port_,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_static_method__static_method__StructOnlyForBlock2(
      port_,
      message,
    );
  }

  late final _wire_test_static_method__static_method__StructOnlyForBlock2Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_uint_8_list>)>>(
          'wire_test_static_method__static_method__StructOnlyForBlock2');
  late final _wire_test_static_method__static_method__StructOnlyForBlock2 =
      _wire_test_static_method__static_method__StructOnlyForBlock2Ptr
          .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  ffi.Pointer<wire_EnumDefinedInBlock2> new_box_autoadd_enum_defined_in_block_2() {
    return _new_box_autoadd_enum_defined_in_block_2();
  }

  late final _new_box_autoadd_enum_defined_in_block_2Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_EnumDefinedInBlock2> Function()>>(
          'new_box_autoadd_enum_defined_in_block_2');
  late final _new_box_autoadd_enum_defined_in_block_2 =
      _new_box_autoadd_enum_defined_in_block_2Ptr.asFunction<ffi.Pointer<wire_EnumDefinedInBlock2> Function()>();

  ffi.Pointer<wire_StructDefinedInBlock2> new_box_autoadd_struct_defined_in_block_2() {
    return _new_box_autoadd_struct_defined_in_block_2();
  }

  late final _new_box_autoadd_struct_defined_in_block_2Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_StructDefinedInBlock2> Function()>>(
          'new_box_autoadd_struct_defined_in_block_2');
  late final _new_box_autoadd_struct_defined_in_block_2 =
      _new_box_autoadd_struct_defined_in_block_2Ptr.asFunction<ffi.Pointer<wire_StructDefinedInBlock2> Function()>();

  ffi.Pointer<wire_StructOnlyForBlock2> new_box_autoadd_struct_only_for_block_2() {
    return _new_box_autoadd_struct_only_for_block_2();
  }

  late final _new_box_autoadd_struct_only_for_block_2Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_StructOnlyForBlock2> Function()>>(
          'new_box_autoadd_struct_only_for_block_2');
  late final _new_box_autoadd_struct_only_for_block_2 =
      _new_box_autoadd_struct_only_for_block_2Ptr.asFunction<ffi.Pointer<wire_StructOnlyForBlock2> Function()>();

  ffi.Pointer<EnumDefinedInBlock2Kind> inflate_EnumDefinedInBlock2_Move() {
    return _inflate_EnumDefinedInBlock2_Move();
  }

  late final _inflate_EnumDefinedInBlock2_MovePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<EnumDefinedInBlock2Kind> Function()>>('inflate_EnumDefinedInBlock2_Move');
  late final _inflate_EnumDefinedInBlock2_Move =
      _inflate_EnumDefinedInBlock2_MovePtr.asFunction<ffi.Pointer<EnumDefinedInBlock2Kind> Function()>();

  ffi.Pointer<EnumDefinedInBlock2Kind> inflate_EnumDefinedInBlock2_Write() {
    return _inflate_EnumDefinedInBlock2_Write();
  }

  late final _inflate_EnumDefinedInBlock2_WritePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<EnumDefinedInBlock2Kind> Function()>>('inflate_EnumDefinedInBlock2_Write');
  late final _inflate_EnumDefinedInBlock2_Write =
      _inflate_EnumDefinedInBlock2_WritePtr.asFunction<ffi.Pointer<EnumDefinedInBlock2Kind> Function()>();

  ffi.Pointer<EnumDefinedInBlock2Kind> inflate_EnumDefinedInBlock2_ChangeColor() {
    return _inflate_EnumDefinedInBlock2_ChangeColor();
  }

  late final _inflate_EnumDefinedInBlock2_ChangeColorPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<EnumDefinedInBlock2Kind> Function()>>(
          'inflate_EnumDefinedInBlock2_ChangeColor');
  late final _inflate_EnumDefinedInBlock2_ChangeColor =
      _inflate_EnumDefinedInBlock2_ChangeColorPtr.asFunction<ffi.Pointer<EnumDefinedInBlock2Kind> Function()>();

  void wire_test_method__method__StructOnlyForBlock3(
    int port_,
    ffi.Pointer<wire_StructOnlyForBlock3> that,
    ffi.Pointer<wire_uint_8_list> message,
    int num,
  ) {
    return _wire_test_method__method__StructOnlyForBlock3(
      port_,
      that,
      message,
      num,
    );
  }

  late final _wire_test_method__method__StructOnlyForBlock3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_StructOnlyForBlock3>, ffi.Pointer<wire_uint_8_list>,
              ffi.Uint16)>>('wire_test_method__method__StructOnlyForBlock3');
  late final _wire_test_method__method__StructOnlyForBlock3 = _wire_test_method__method__StructOnlyForBlock3Ptr
      .asFunction<void Function(int, ffi.Pointer<wire_StructOnlyForBlock3>, ffi.Pointer<wire_uint_8_list>, int)>();

  void wire_test_static_method__static_method__StructOnlyForBlock3(
    int port_,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_static_method__static_method__StructOnlyForBlock3(
      port_,
      message,
    );
  }

  late final _wire_test_static_method__static_method__StructOnlyForBlock3Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_uint_8_list>)>>(
          'wire_test_static_method__static_method__StructOnlyForBlock3');
  late final _wire_test_static_method__static_method__StructOnlyForBlock3 =
      _wire_test_static_method__static_method__StructOnlyForBlock3Ptr
          .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();
}

final class _Dart_Handle extends ffi.Opaque {}

final class wire_SharedComplexEnumInAllBlocks_Empty extends ffi.Opaque {}

final class wire_SharedComplexEnumInAllBlocks_Primitives extends ffi.Struct {
  @ffi.Int32()
  external int int32;

  @ffi.Double()
  external double float64;

  @ffi.Bool()
  external bool boolean;
}

final class wire_SharedComplexEnumInAllBlocks_Nested extends ffi.Struct {
  external ffi.Pointer<wire_SharedComplexEnumInAllBlocks> field0;
}

final class SharedComplexEnumInAllBlocksKind extends ffi.Union {
  external ffi.Pointer<wire_SharedComplexEnumInAllBlocks_Empty> Empty;

  external ffi.Pointer<wire_SharedComplexEnumInAllBlocks_Primitives> Primitives;

  external ffi.Pointer<wire_SharedComplexEnumInAllBlocks_Nested> Nested;

  external ffi.Pointer<wire_SharedComplexEnumInAllBlocks_Optional> Optional;

  external ffi.Pointer<wire_SharedComplexEnumInAllBlocks_Buffer> Buffer;
